# DiffDock

./: default_inference_args.yaml  main.py  pyproject.toml  train.sh
confidence/: dataset.py
data/: testset_csv.csv
data/splits/sixty_forty/: test.csv  train.csv  val.csv
datasets/: esm_embedding_preparation.py
